#####                         CHANGELOG                                    #####
#####                                                                      #####
################################################################################

0.1.*: UPDATES
--------------------------------------------------------------------------------
* 86: More verbose output added for verbosity>1
* 85: Fixed the wrapper function and added missing options from individual function calls
* 84: similarityMatrix tests added
* 83: Verbosity issues in getPairwiseSimilarityLoci fixed
* 82: Adjustment for better consistency in finding package installation path
* 81: Tests for calculatePairwiseSimilarities added
* 80: Better examples added to estiamteErrors function
* 79: estimateErrors has now a outdir option to define the output folder as well
* 78: Added tests for fluidigm2PLINK
* 77: Added a FAQ section to the vignette to address the most common problems the package might cause
* 76: Updated fluidigm2PLINK help to provide more details on harmonising marker names mismach issues
* 75: New option 'outdir' in fluidigm2PLINK function
* 74: Example dataset added
* 73: Notes in DESCRIPTION file adjusted
* 72: Package description added to the manual
* 71: Help, function and vignette for similarityMatrix adjusted
* 70: Vignette chapter about getPairwiseSimilarityLoci added
* 69: Additional and more detailed input checks for getPairwiseSimilarityLoci added
* 68: Help file description for getPairwiseSimilarityLoci adjusted
* 67: Vignette chapter about calculatePairwiseSimilarities added
* 66: Additional and more detailed input checks for calculatePairwiseSimilarities added
* 65: Help file description for calculatePairwiseSimilarities adjusted
* 64: Vignette updated for replicates and negative controls
* 63: Bugfix: estimateErrors concidered sp.markers only when sexing was performed, they act no independent
* 62: Changed sexing=FALSE as new default in estimateErrors()